--- a/index.html
+++ b/index.html
@@ -86,7 +86,7 @@
 
     <!-- img -->
     <div id="photo" data-aos="fade-up" data-aos-duration="3000">
-        <img src="images/1.png" alt="img" height="650px" width="570px">
+        <img src="images/mian.png" alt="img" height="650px" width="570px">
     </div>
     <div class="container-fluid">
         <h1 class="developer" data-aos="fade-right" data-aos-offset="300" data-aos-easing="ease-in-sine"
@@ -228,7 +228,22 @@
                 
     </div>
 
-
+<!-- BUBBLES -->
+<div class="bubbles">
+    <img src="images/1.png" alt="">
+    <img src="images/1.png" alt="">
+    <img src="images/1.png" alt="">
+    <img src="images/1.png" alt="">
+    <img src="images/1.png" alt="">
+    <img src="images/1.png" alt="">
+    <img src="images/1.png" alt="">
+    <img src="images/1.png" alt="">
+    <img src="images/1.png" alt="">
+    <img src="images/1.png" alt="">
+    <img src="images/1.png" alt="">
+    <img src="images/1.png" alt="">
+    <img src="images/1.png" alt="">
+</div>
 
     <!-- Bootstrap Java Script Link -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js"
