--- a/index.html
+++ b/index.html
@@ -88,7 +88,7 @@
     <div id="photo" data-aos="fade-up" data-aos-duration="3000">
         <img src="images/mian.png" alt="img" height="650px" width="570px">
     </div>
-    <div class="container-fluid">
+    <div class="container-fluid banner">
         <h1 class="developer" data-aos="fade-right" data-aos-offset="300" data-aos-easing="ease-in-sine"
             data-aos-duration="3000">Web Developer</h1>
         <p class="text-secondary">
@@ -237,6 +237,7 @@
     <script>
         AOS.init();
     </script>
+    <script src="script.js"></script>
 </body>
 
 </html>
