--- a/index.html
+++ b/index.html
@@ -237,6 +237,7 @@
     <script>
         AOS.init();
     </script>
+    <!-- javascript link -->
     <script src="script.js"></script>
 </body>
 
